# JsonChecker

./: CMakeLists.txt  LICENSE  README.md  logo.rc
cmake/macros/: AutoCollect.cmake  StaticMFC.cmake
code/: common.cpp  common.h  main.cpp  parser.cpp  parser.h
